Name:                pts
Version:             0.1
Synopsis:            Interpreter for functional pure type systems.
-- Description:         
License:             AllRightsReserved
-- License-file:        LICENSE
Author:              Tillmann Rendel, Klaus Ostermann
Maintainer:          rendel@informatik.uni-marburg.de
-- Copyright:           
Category:            Language
Build-type:          Simple
-- Extra-source-files:  
Cabal-version:       >= 1.8

Library
  Hs-source-dirs:      src-lib
  Build-depends:       base < 5,
                       containers == 0.4.*,
                       pretty == 1.0.*,
                       mtl == 2.0.*,
                       transformers ==0.2.*,
                       parsec == 3.1.*,
                       template-haskell,
                       syb
  Exposed-modules:     Tools.Instances,
                       Tools.Errors.Class,
                       Parametric.Pretty,
                       PTS.Instances,
                       PTS.Options,
                       Parametric.Error,
                       Parametric.AST,
                       PTS.Algebra,
                       PTS.AST,
                       PTS.Normalisation,
                       PTS.Pretty,
                       PTS.Diff,
                       PTS.Core,
                       PTS.Main,
                       PTS.Substitution,
                       PTS.QuasiQuote,
                       Parametric.Parser.Error,
                       Parametric.Parser,
                       PTS.Parser,
                       Tools.Errors,
                       Control.Monad.Log,
                       Control.Monad.Environment

Executable pts
  Hs-source-dirs:      src-exec
  Main-is:             pts.hs
  Build-depends:       base < 5,
                       containers == 0.4.*,
                       pretty == 1.0.*,
                       mtl == 2.0.*,
                       transformers ==0.2.*,
                       parsec == 3.1.*,
                       pts

  -- Build-tools:         

-- Executable pts-quote
--   Hs-source-dirs:      src-exec
--   Main-is:             pts-quote.hs
--   Build-depends:       base < 5,
--                        mtl == 2.0.*,
--                        transformers == 0.2.*,
--                        parsec == 3.1.*,
--                        containers == 0.4.*,
--                        pretty == 1.0.*,
--                        pts


Test-suite tests
  Type: exitcode-stdio-1.0
  Hs-source-dirs:      src-test
  Main-is:             tests.hs
  Other-modules:       PTS.Pretty.Tests,
                       PTS.Substitution.Properties,
                       PTS.Substitution.Tests,
                       Test.Property
  Build-depends:       base >= 4.0 && < 5,
                       mtl == 2.0.*,
                       transformers == 0.2.*,
                       containers == 0.4.*,
                       pretty == 1.0.*,
                       test-framework,
                       test-framework-quickcheck2,
                       test-framework-hunit,
                       QuickCheck,
                       HUnit,
                       parsec == 3.1.*,
                       pts
  -- Ghc-options: -Wall -fno-warn-orphans