Name:                pts
Version:             0.1
Synopsis:            Interpreter for functional pure type systems.
Description:         Interpreter for functional pure type systems.
License:             BSD3
License-file:        LICENSE
Author:              Tillmann Rendel, Klaus Ostermann, Paolo G. Giarrusso
Maintainer:          rendel@informatik.uni-marburg.de
-- Copyright:
Category:            Language
Build-type:          Simple
Extra-source-files:  examples/Arithmetics.lpts
Cabal-version:       >= 1.8

Source-Repository head
  type:                git
  location:            git://github.com/Toxaris/pts.git
  branch:              master

Library
  Hs-source-dirs:      src-lib
  Build-depends:       base < 5,
                       containers >= 0.4 && < 0.6,
                       pretty >= 1.0 && < 1.2,
                       mtl >= 2.0 && < 2.2,
                       transformers >= 0.2 && < 0.4,
                       parsec == 3.1.*,
                       template-haskell,
                       syb,
                       filepath,
                       directory >= 1.2.0.1 && < 1.3
  Exposed-modules:     Control.Monad.Assertions
                       Control.Monad.Environment
                       Control.Monad.Log
                       Parametric.AST
                       Parametric.Error
                       Parametric.Parser
                       Parametric.Parser.Error
                       Parametric.Pretty
                       PTS.Dynamics
                       PTS.Dynamics.Binding
                       PTS.Dynamics.Evaluation
                       PTS.Dynamics.Module
                       PTS.Dynamics.Normalisation
                       PTS.Dynamics.Value
                       PTS.File
                       PTS.Instances
                       PTS.Main
                       PTS.Options
                       PTS.QuasiQuote
                       PTS.Statics
                       PTS.Statics.Typing
                       PTS.Syntax
                       PTS.Syntax.Algebra
                       PTS.Syntax.Constants
                       PTS.Syntax.Diff
                       PTS.Syntax.File
                       PTS.Syntax.Names
                       PTS.Syntax.Parser
                       PTS.Syntax.Pretty
                       PTS.Syntax.Statement
                       PTS.Syntax.Substitution
                       PTS.Syntax.Term
                       PTS.Transform
                       Tools.Errors
                       Tools.Errors.Class
                       Tools.Instances

Executable pts
  Hs-source-dirs:      src-exec
  Main-is:             pts.hs
  Build-depends:       base < 5,
                       containers >= 0.4 && < 0.6,
                       pretty >= 1.0 && < 1.2,
                       mtl >= 2.0 && < 2.2,
                       transformers >= 0.2 && < 0.4,
                       parsec == 3.1.*,
                       pts

  -- Build-tools:

Executable pts-nbe
  Hs-source-dirs:      src-exec
  Main-is:             pts-nbe.hs
  Build-depends:       base < 5,
                       pts

Executable pts-quote
  Hs-source-dirs:      src-exec
  Main-is:             pts-quote.hs
  Build-depends:       base < 5,
                       pts

Test-suite tests
  Type: exitcode-stdio-1.0
  Hs-source-dirs:      src-test
  Main-is:             tests.hs
  Other-modules:       PTS.Core.Properties
                       PTS.Core.Tests
                       PTS.File.Tests
                       PTS.Syntax.Arbitrary
                       PTS.Syntax.Parser.Tests
                       PTS.Syntax.Pretty.Tests
                       PTS.Syntax.Substitution.Properties
                       PTS.Syntax.Substitution.Tests
                       Test.Property
  Build-depends:       base >= 4.0 && < 5,
                       mtl >= 2.0 && < 2.2,
                       transformers >= 0.2 && < 0.4,
                       containers >= 0.4 && < 0.6,
                       pretty >= 1.0 && < 1.2,
                       test-framework,
                       test-framework-quickcheck2,
                       test-framework-hunit,
                       QuickCheck,
                       HUnit,
                       parsec == 3.1.*,
                       pts,
                       directory >= 1.2.0.1 && < 1.3
  -- Ghc-options: -Wall -fno-warn-orphans
